# 2048_android

./: Readme.md
Server/: CMakeLists.txt  open_project.cmd
Server/src/: CMakeLists.txt  main.cpp
Server/src/libraries/: CMakeLists.txt
Server/src/libraries/basiclib/: CMakeLists.txt  basicdefs.h
client/Android/: build.gradle
client/Android/app/: build.gradle
client/Android/app/src/androidTest/java/com/wusiko/test/: ExampleInstrumentedTest.java
client/Android/app/src/main/: AndroidManifest.xml
client/Android/app/src/main/java/com/wusiko/game2048/data/: LoginCallback.java  LoginDataSource.java  LoginRepository.java  Result.java
client/Android/app/src/main/java/com/wusiko/game2048/data/game/: CreatedTileLink.java  GameBoard.java  GameConfig.java  GameTile.java  GameTileFactory.java  GameTileLink.java  MergedTileLink.java  MoveResult.java  MovedTileLink.java  MovementState.java  TileLinkContainer.java
client/Android/app/src/main/java/com/wusiko/game2048/data/login/: LeaderBoard.java  LeaderBoardRecord.java  LoggedInUser.java  LoginDataSource.java  LoginRepository.java  Result.java  UserData.java
client/Android/app/src/main/java/com/wusiko/game2048/data/model/: LoggedInUser.java
client/Android/app/src/main/res/animator/: tile_creating.xml
client/Android/app/src/main/res/layout/: activity_game.xml  activity_login.xml
client/Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
client/Android/app/src/test/java/com/wusiko/test/: ExampleUnitTest.java
client/Android/gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
